# k-armed-bandit-exercise

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: jupyter_nbconvert_config.py  notebook.md
