[tool.poetry]
name = "k-armed-bandit-exercise"
version = "1.0.0"
description = "Example notebook for learning about k-armed bandits"
authors = ["Michael Barton <mail@michaelbarton.me.uk>"]
license = "MIT"

[tool.poetry.dependencies]
"ruamel.yaml" = "^0.16.12"
black = "^20.8b1"
blacken-docs = "^1.9.1"
ipytest = "^0.9.1"
jupyter = "^1.0.0"
jupytext = "^1.8.0"
nbconvert = "^6.0.7"
pandas = "^1.2.0"
pytest = "^6.2.1"
python = "^3.8"
rich = "^9.6.0"
numpy = "^1.19.5"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
